<resources>
    <string name="app_name">晾霸智能</string>
    <string name="login">账号已登录</string>
    <string name="haslogin">账号已登录</string>
    <string name="hasnotlogin">账号未登录</string>
    <string name="logout_success">账号登出成功</string>
    <string name="logout_fail">账号登出失败</string>
    <string name="init_account_success">账号初始化成功</string>
    <string name="init_account_error">账号初始化异常</string>
    <string name="gettoken_fail">获取access_token失败</string>
    <string name="getuserinfo_fail">获取用户信息失败</string>
    <string name="connectwifi">请先连接WIFI</string>
    <string name="local_network_unnedd_pwd">该网络不需要密码</string>
    <string name="str_devices_configure_wifi_change">切换WIFI</string>
    <string name="local_network_exception">没有可用网络，请检查您的网络</string>
    <string name="str_devices_not_support_5G_wifi">暂不支持5G Wi-Fi</string>
    <string name="str_devices_chosse_wifi_network">选择设备加入的WiFi网络</string>
    <string name="str_devices_configure_wifi_ware">现在所连接的是隐藏网络，请输入网络名称</string>
    <string name="str_next">下一步</string>
    <string name="str_configiningwifi">正在配网</string>
    <string name="str_activingdevice">正在激活</string>
    <string name="str_configfinish">配置完成</string>
    <string name="str_configtryagain">再试一次</string>
    <string name="str_activedeviceerror">设备激活失败</string>
    <string name="str_configdeviceerror">设备配网失败</string>
    <string name="str_configdevicesuccess">配置成功</string>
    <string name="str_activedeviceerroradvice">1.确保您的设备已经按照开始时的提示，设置到配网状态；\n2.确保之前输⼊的WiFi账号密码无误；\n3.确保设备与家庭路由器的距离不要太远；\n4.您的路由器是否设置到了5GHz,可以进入路由器管理设置检查，确保是2.4GHz；</string>
    <string name="str_configdeviceerroradvice">1.确保您的设备已经按照开始时的提示，设置到配网状态；\n2.确保之前输入的WiFi账号密码⽆误；\n3.确保设备与家庭路由器的距离不要太远；\n4.您的路由器是否设置到了5GHz,可以进入路由器管理设置检查，确保是2.4GHz；</string>
    <string name="str_devices_add_configuring">正在添加设备，请耐心等待</string>
    <string name="str_devices_add_configuring_info">尽量使您的路由器、手机与设备互相靠近。</string>
    <string name="str_send_verification_code">获取验证码</string>
    <string name="str_resend_verification_code">重新发送</string>
    <string name="str_err_network">网络出现异常，请检查您的网络连接</string>
    <string name="str_settings_safety_phone_number">输入手机号</string>
    <string name="str_settings_safety_email">邮箱</string>
    <string name="server_is_busy">服务器繁忙</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="account_has_been_registered">帐号已被注册</string>
    <string name="data_error">数据错误</string>
    <string name="account_or_password_incorrect">帐号或密码不正确</string>
    <string name="verification_code_is_invalid">验证码已失效</string>
    <string name="please_sign_in_first">请登陆后操作</string>
    <string name="old_password_incorrect">原始密码错误</string>
    <string name="avatar_does_not_exist">头像不存在</string>
    <string name="please_sign_in_again">请重新登陆</string>
    <string name="information_does_not_match">信息不匹配</string>
    <string name="sign_in_after_3_hours">三小时后再登陆</string>
    <string name="email_error">邮箱错误</string>
    <string name="you_have_already_associated_this_account">您已绑定该帐号</string>
    <string name="the_account_has_been_associated_by_another_user">该帐号已被其他用户绑定</string>
    <string name="this_3rd_party_account_is_not_associated">该第三方帐号未绑定</string>
    <string name="the_uploaded_avatar_exceeds_500KB">上传的头像超过了50k</string>
    <string name="email_or_password_incorrect">邮箱或密码不正确</string>
    <string name="too_frequent_registrations">注册过于频繁</string>
    <string name="account_type_3rd_does_not_exist">不存在第三方帐号类型</string>
    <string name="remaining_signin_times">登陆剩余次数</string>
    <string name="sending_verification_code_error">发送验证码错误</string>
    <string name="mobile_phone_number_error">手机号码错误</string>
    <string name="avatar_saving_error">头像保存错误</string>
    <string name="sending_validation_code_too_frequently">验证码发送过于频繁</string>
    <string name="validation_code_timeout_or_does_not_exist">验证码超时或不存在</string>
    <string name="the_mobile_phone_number_has_been_registered">手机号码已经注册</string>
    <string name="mobile_phone_number_or_password_incorrect">手机号码或密码不正确</string>
    <string name="under_validation">未验证手机验证码</string>
    <string name="str_addbydevtype">通过设备品类添加</string>
    <string name="account_does_not_exist">帐号不存在</string>
    <string name="too_frequent_requests">尝试次数过多_请过一段时间后重试</string>
    <string name="signin_information_error">登陆信息不正确</string>
    <string name="email_address_has_been_registered">邮箱已经注册</string>
    <string name="too_frequent_tries_of_sending_SMS">发送短信次数过多</string>
    <string name="data_too_long">数据超长</string>
    <string name="permission_format_error">权限格式错误</string>
    <string name="permission_exists">权限已存在</string>
    <string name="role_format_error">角色格式错误</string>
    <string name="role_exists">角色已存在</string>
    <string name="company_exists">企业已存在</string>
    <string name="company_does_not_exist">企业不存在</string>
    <string name="license_does_not_exist">license不存在</string>
    <string name="this_account_has_been_disabled">该账号被禁用</string>
    <string name="password_has_been_set">密码已设置，请直接修改密码</string>
    <string name="str_common_error_code">错误码:%1d</string>
    <string name="str_phone">手机</string>
    <string name="str_eamil">邮箱</string>
    <string name="str_getcoderemain_time">重新发送(%1d)</string>
    <string name="str_device_waiteactive">设备等待激活</string>
    <string name="str_deviceactive_state">请任意操作一下设备完成激活绑定</string>
    <string name="str_version">版本升级</string>
    <string name="str_about">关于晾霸</string>
    <string name="str_setting">账号设置</string>
    <string name="str_userdevicelist_title">BroadLink SDS</string>
    <string name="str_nickname">昵称</string>
    <string name="str_faceicon">头像</string>
    <string name="str_modifypassword">修改密码</string>
    <string name="str_editenickname">编辑昵称</string>
    <string name="str_loginout">退出登录</string>
    <string name="str_currentversion">当前版本</string>
    <string name="str_latestversion">最新版本</string>
    <string name="str_update">升级到最新版本</string>
    <string name="str_finish">完成</string>
    <string name="str_modifynicknamefail">修改昵称失败</string>
    <string name="str_modifypasswordfail">修改密码失败</string>
    <string name="str_nullmodifynickname">不能是空白昵称</string>
    <string name="str_nulloldpassword">原密码不能是空白</string>
    <string name="str_nullnewpassword">密码不能是空白</string>
    <string name="str_newpassworddifferent">两次输入的密码不一样</string>
    <string name="str_hint_oldpassword">请输入原密码</string>
    <string name="str_hint_newpasswor">输入6-16位数字字符组合密码</string>
    <string name="str_hint_verification">请输入验证码</string>
    <string name="str_hint_new2passwor">请再次输入新密码</string>
    <string name="str_choosepic_takephoto">拍照</string>
    <string name="str_choosepic_phonegallay">从手机相册选择</string>
    <string name="str_choosepic_cancle">取消</string>
    <string name="str_croppic_cancle">取消</string>
    <string name="str_croppic_sure">确认</string>
    <string name="str_croppic_rotate">旋转</string>
    <string name="str_adddevice">选择设备型号</string>
    <string name="str_adddevice_fail">添加设备失败</string>
    <string name="str_adddevice_success">添加设备成功</string>
    <string name="str_binddevice_fail">绑定设备失败</string>
    <string name="str_binddevice_success">绑定设备成功</string>
    <string name="str_scanner">扫一扫</string>
    <string name="str_main_free_device">未添加设备</string>
    <string name="str_mainaccount_register">注册</string>
    <string name="str_mainaccount_noregister">还没有账号？</string>
    <string name="str_mainaccount_login">登录</string>
    <string name="str_mainaccount_haveaccount">已有账号？</string>
    <string name="str_mainaccount_back">返回</string>
    <string name="str_settings_safety_original_phone_password">密码</string>
    <string name="str_forgot_login_details">str_forgot_login_details</string>
    <string name="str_get_help_signin">忘记密码？</string>
    <string name="str_account_hint_account">手机号</string>
    <string name="str_getbackpwed_hint_account">输入手机号</string>
    <string name="str_account_signin">登录</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="str_loginfail">登陆失败</string>
    <string name="str_register_errorphoneoremail">请输入正确的电话号码</string>
    <string name="str_register_errorphone">请输入正确的电话号码</string>
    <string name="str_getbackpassword">找回密码</string>
    <string name="str_getbackpassword_errordata">输入数据有误</string>
    <string name="str_getbackpassword_success">找回密码成功</string>
    <string name="str_getbackpassword_fail">找回密码失败</string>
    <string name="str_getbackpassword_sure">确认</string>
    <string name="str_singup_password">输入6-16位数字字符组合密码</string>
    <string name="str_singup_password2">再次输入密码</string>
    <string name="str_singup_success">注册成功</string>
    <string name="str_singup_fail">注册失败</string>
    <string name="str_sendcode_success">验证码已发送，请注意查收</string>
    <string name="str_code">验证码</string>
    <string name="str_property">属性</string>
    <string name="str_time">定时</string>
    <string name="str_devicename">设备名称</string>
    <string name="str_deviceicon">设备图片</string>
    <string name="str_deviceshare">设备分享</string>
    <string name="str_deviceota">固件升级</string>
    <string name="str_deletedevice">删除设备</string>
    <string name="str_unbindrelaccount">解除绑定</string>
    <string name="str_unbindrelaccount_success">解除绑定成功</string>
    <string name="str_unbindrelaccount_fail">解除绑定失败</string>
    <string name="str_share">分享</string>
    <string name="str_editedevicename">编辑名称</string>
    <string name="str_nullmodifydevicename">不能是空白名称</string>
    <string name="str_modifydevicename_fail">修改名称失败</string>
    <string name="str_getshareqr_fail">获取分享二维码失败</string>
    <string name="str_camera_error">“相机访问权限已被禁止，请到设置中打开”</string>
    <string name="str_sharedeviceqr">扫描二维码即可控制该设备</string>
    <string name="str_addscene">添加定时</string>
    <string name="str_noscene">还没有添加定时</string>
    <string name="str_deletescene">删除</string>
    <string name="str_deletescene_success">删除定时成功</string>
    <string name="str_deletescene_fail">删除定时失败</string>
    <string name="str_fail">失败</string>
    <string name="str_scene_open">开启</string>
    <string name="str_scene_close">关闭</string>
    <string name="str_scene_openclose">开启关闭</string>
    <string name="str_scene_onlyonece">仅一次</string>
    <string-array name="weeks">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="str_week7">周日</string>
    <string name="str_week1">周一</string>
    <string name="str_week2">周二</string>
    <string name="str_week3">周三</string>
    <string name="str_week4">周四</string>
    <string name="str_week5">周五</string>
    <string name="str_week6">周六</string>
    <string name="str_scenemodel">模板</string>
    <string name="str_sceneaction">执行操作</string>
    <string name="str_sceneactiontime">执行时间</string>
    <string name="str_scenerepeat">重复设置</string>
    <string name="str_firstaction">动作一</string>
    <string name="str_secondtaction">动作二</string>
    <string name="str_scenesave">保存</string>
    <string name="str_sceneset">定时设置</string>
    <string name="str_set">设置</string>
    <string name="str_sure">确认</string>
    <string name="str_cancle">取消</string>
    <string name="str_hour">时</string>
    <string name="str_minute">分</string>
    <string name="str_scene_dataerror">定时数据不完整，无法保存</string>
    <string name="str_scene_savesuccess">保存成功</string>
    <string name="str_scene_savefail">保存失败</string>
    <string name="str_scene_timeformat">%1$d:%2$02d</string>
    <string name="str_deviceoffline">设备离线</string>
    <string name="str_deviceoff">OFF</string>
    <string name="str_deviceon">ON</string>
    <string name="str_devicecontrol_fail">控制失败</string>
    <string name="str_searchproduct_hint">搜索名称或型号</string>
    <string name="str_oldpassword">原密码</string>
    <string name="str_newpassword">新密码</string>
    <string name="str_erroridorpassword">账号或密码错误，请重新输⼊</string>
    <string name="str_inputpassword">请输入WiFi密码</string>
</resources>