<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#333"
    android:orientation="vertical" >

    <com.lbest.rm.view.CropImage.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/crop_bt_width"
        android:layout_height="@dimen/crop_bt_height"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/str_croppic_cancle"
        android:background="@null" />

    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="@dimen/crop_bt_width"
        android:layout_height="@dimen/crop_bt_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/str_croppic_rotate"
        android:background="@null" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/crop_bt_width"
        android:layout_height="@dimen/crop_bt_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:text="@string/str_croppic_sure"
        android:background="@null" />

</RelativeLayout>