<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="26dp"
    android:paddingRight="26dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/account_view"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:hint="@string/str_account_hint_account"
        android:background="@null"
        android:inputType="phone"
        android:textColor="#5d5c5a"
        android:textColorHint="@color/color_hint"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/str_settings_safety_original_phone_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#5d5c5a"
            android:textColorHint="@color/color_hint"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/password_eye_view"
            android:layout_width="20dp"
            android:layout_height="46dp"
            android:layout_weight="0"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/password_invisiable"
            android:tag="1" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray_bg"/>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/accountmain_loginbt_height"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_yellow_selector"
        android:textSize="16sp"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/str_mainaccount_login"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/btn_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:background="@null"
        android:text="@string/str_get_help_signin"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />
</LinearLayout>