<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.lbest.rm.ModifyNicknameActivity">

    <include layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_oldpassword"
        android:textColor="@color/tabgray_selected"
        android:textSize="@dimen/modifypassword_ts"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ip_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColorHint="#bbbbbb"
            android:hint="@string/str_hint_oldpassword"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_toLeftOf="@+id/iv_pwd_old"
            android:textSize="@dimen/modifypassword_et_ts" />

        <ImageView
            android:id="@+id/iv_pwd_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/password_invisiable"/>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="8dp"
        android:background="@color/line_gray_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_newpassword"
        android:textColor="@color/tabgray_selected"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/modifypassword_ts" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ip_newpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/str_hint_newpasswor"
            android:textColorHint="#bbbbbb"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_pwd_new"
            android:lines="1"
            android:textSize="@dimen/modifypassword_et_ts" />

        <ImageView
            android:id="@+id/iv_pwd_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/password_invisiable"/>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="8dp"
        android:background="@color/line_gray_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ip_newpassword2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/str_hint_new2passwor"
            android:background="@null"
            android:textColorHint="#bbbbbb"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_toLeftOf="@+id/iv_pwd_new2"
            android:textSize="@dimen/modifypassword_et_ts" />

        <ImageView
            android:id="@+id/iv_pwd_new2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/password_invisiable"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />


    <TextView
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_sure"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_yellow_selector"
        android:textSize="@dimen/modifypassword_et_ts"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"/>
</LinearLayout>